# test1

./: README.md  main.py  pyproject.toml
src/: class_transation.py  func_prog.py  main.py  make_class.py  utils.py
tests/: test_func_prog.py
